--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
-    <link href="https://unpkg.com/slim-select@latest/dist/slimselect.css" rel="stylesheet">
+    <link
+      href="https://unpkg.com/slim-select@latest/dist/slimselect.css"
+      rel="stylesheet"
+    />
     <title>Homework 10</title>
   </head>
   <body>
-    <select class="breed-select disable-js"></select>
-    <p class="loader disable-js">Loading data, please wait...</p>
+    <select class="breed-select"></select>
+    <p class="loader disable-js">Loading data, please wait... <span class="loader-circle"></span></p>
     <p class="error disable-js">
       Oops! Something went wrong! Try reloading the page!
     </p>
