--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="#" />
     <link rel="stylesheet" href="./css/style.css" />
     <link
       href="https://unpkg.com/slim-select@latest/dist/slimselect.css"
@@ -12,7 +13,9 @@
   </head>
   <body>
     <select class="breed-select"></select>
-    <p class="loader disable-js">Loading data, please wait... <span class="loader-circle"></span></p>
+    <p class="loader disable-js">
+      Loading data, please wait... <span class="loader-circle"></span>
+    </p>
     <p class="error disable-js">
       Oops! Something went wrong! Try reloading the page!
     </p>
